// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for completed members 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ECEEF2",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      />
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "flex-start",
                "alignSelf": "flex-start",
                "justifyContent": "center",
              },
              Object {
                "alignItems": "flex-end",
                "alignSelf": "flex-end",
              },
            ]
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "opacity": 1,
              }
            }
            testID="IconButton"
          >
            <Image
              source={
                Object {
                  "testUri": "../../../assets/images/closeButton.png",
                }
              }
              style={
                Object {
                  "margin": 10,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
  <RCTScrollView
    style={
      Object {
        "backgroundColor": "#ECEEF2",
        "flex": 1,
        "flexDirection": "column",
      }
    }
  >
    <View>
      <Text
        style={
          Object {
            "color": "#505256",
            "fontFamily": "SourceSansPro-Light",
            "fontSize": 24,
            "fontStyle": "normal",
            "lineHeight": 30,
            "paddingHorizontal": 20,
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        2 Members Joined
      </Text>
      <View
        style={
          Array [
            Object {
              "paddingTop": 20,
            },
            Object {
              "flex": 1,
            },
          ]
        }
      >
        <RCTScrollView
          data={
            Array [
              Object {
                "accepted_at": "2020-02-26 12:00:00 PM GMT+0",
                "id": "111",
                "person": Object {
                  "full_name": "Christian Huffman",
                  "id": "111",
                },
              },
              Object {
                "accepted_at": "2020-02-26 12:00:00 PM GMT+0",
                "id": "112",
                "person": Object {
                  "full_name": "Scotty Waggoner",
                  "id": "112",
                },
              },
            ]
          }
          disableVirtualization={false}
          getItem={[Function]}
          getItemCount={[Function]}
          horizontal={false}
          initialNumToRender={10}
          keyExtractor={[Function]}
          maxToRenderPerBatch={10}
          onContentSizeChange={[Function]}
          onEndReachedThreshold={2}
          onLayout={[Function]}
          onMomentumScrollEnd={[Function]}
          onScroll={[Function]}
          onScrollBeginDrag={[Function]}
          onScrollEndDrag={[Function]}
          removeClippedSubviews={false}
          renderItem={[Function]}
          scrollEventThrottle={50}
          stickyHeaderIndices={Array []}
          style={
            Object {
              "backgroundColor": "#ECEEF2",
              "flex": 1,
            }
          }
          updateCellsBatchingPeriod={50}
          viewabilityConfigCallbackPairs={Array []}
          windowSize={21}
        >
          <View>
            <View
              onLayout={[Function]}
              style={null}
            >
              <View
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                testID="ChallengeMemberItemButton"
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#ffffff",
                        "borderRadius": 8,
                        "elevation": 4,
                        "flexDirection": "row",
                        "marginHorizontal": 16,
                        "marginVertical": 8,
                        "shadowColor": "#000000",
                        "shadowOffset": Object {
                          "height": 2,
                          "width": 0,
                        },
                        "shadowOpacity": 0.3,
                        "shadowRadius": 2,
                      },
                      Object {
                        "borderRadius": 8,
                        "elevation": 6,
                        "marginVertical": 4,
                        "shadowColor": "rgba(0,0,0,0.1)",
                        "shadowOffset": Object {
                          "height": 6,
                          "width": 4,
                        },
                        "shadowOpacity": 0.3,
                        "shadowRadius": 2,
                      },
                    ]
                  }
                >
                  <View
                    style={
                      Array [
                        Object {
                          "paddingHorizontal": 20,
                          "paddingVertical": 16,
                          "width": 750,
                        },
                        Object {
                          "alignItems": "center",
                          "flexDirection": "row",
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "alignItems": "center",
                            "justifyContent": "center",
                          },
                          Array [
                            Object {
                              "borderRadius": 24,
                              "height": 48,
                              "width": 48,
                            },
                            Object {
                              "backgroundColor": "rgb(159, 167, 125)",
                            },
                            Object {
                              "marginRight": 10,
                            },
                          ],
                        ]
                      }
                    >
                      <Text
                        style={
                          Array [
                            Object {
                              "color": "#ffffff",
                              "fontFamily": "SourceSansPro-Regular",
                              "fontSize": 12,
                              "fontStyle": "normal",
                              "lineHeight": 16,
                              "textAlign": "center",
                              "textAlignVertical": "bottom",
                              "textTransform": "none",
                            },
                            Object {
                              "fontSize": 26,
                              "lineHeight": 20,
                            },
                          ]
                        }
                      >
                        C
                      </Text>
                    </View>
                    <View
                      style={
                        Array [
                          Object {},
                          Object {
                            "alignItems": "center",
                            "flex": 1,
                            "flexDirection": "row",
                            "justifyContent": "space-between",
                          },
                        ]
                      }
                    >
                      <View
                        style={
                          Array [
                            Object {},
                            Object {
                              "flexDirection": "column",
                            },
                          ]
                        }
                      >
                        <Text
                          style={
                            Object {
                              "color": "#005A7F",
                              "fontFamily": "SourceSansPro-Regular",
                              "fontSize": 16,
                              "fontStyle": "normal",
                              "lineHeight": 24,
                              "textAlignVertical": "center",
                              "textTransform": "none",
                            }
                          }
                        >
                          Christian Huffman
                        </Text>
                        <Text
                          style={
                            Array [
                              Object {
                                "color": "#B4B6BA",
                                "fontFamily": "SourceSansPro-Regular",
                                "fontSize": 12,
                                "fontStyle": "normal",
                                "lineHeight": 16,
                                "textAlignVertical": "center",
                                "textTransform": "none",
                              },
                            ]
                          }
                        >
                          Joined 
                          <Text
                            style={
                              Object {
                                "color": "#B4B6BA",
                                "fontFamily": "SourceSansPro-Regular",
                                "fontSize": 12,
                                "fontStyle": "normal",
                                "lineHeight": 16,
                                "textAlignVertical": "center",
                                "textTransform": "none",
                              }
                            }
                            testID="Text"
                          >
                            Wednesday
                          </Text>
                        </Text>
                      </View>
                      <Image
                        source={null}
                        style={
                          Object {
                            "marginRight": 25,
                          }
                        }
                      />
                    </View>
                  </View>
                </View>
              </View>
            </View>
            <View
              onLayout={[Function]}
              style={null}
            >
              <View
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                testID="ChallengeMemberItemButton"
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#ffffff",
                        "borderRadius": 8,
                        "elevation": 4,
                        "flexDirection": "row",
                        "marginHorizontal": 16,
                        "marginVertical": 8,
                        "shadowColor": "#000000",
                        "shadowOffset": Object {
                          "height": 2,
                          "width": 0,
                        },
                        "shadowOpacity": 0.3,
                        "shadowRadius": 2,
                      },
                      Object {
                        "borderRadius": 8,
                        "elevation": 6,
                        "marginVertical": 4,
                        "shadowColor": "rgba(0,0,0,0.1)",
                        "shadowOffset": Object {
                          "height": 6,
                          "width": 4,
                        },
                        "shadowOpacity": 0.3,
                        "shadowRadius": 2,
                      },
                    ]
                  }
                >
                  <View
                    style={
                      Array [
                        Object {
                          "paddingHorizontal": 20,
                          "paddingVertical": 16,
                          "width": 750,
                        },
                        Object {
                          "alignItems": "center",
                          "flexDirection": "row",
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "alignItems": "center",
                            "justifyContent": "center",
                          },
                          Array [
                            Object {
                              "borderRadius": 24,
                              "height": 48,
                              "width": 48,
                            },
                            Object {
                              "backgroundColor": "rgb(216, 216, 67)",
                            },
                            Object {
                              "marginRight": 10,
                            },
                          ],
                        ]
                      }
                    >
                      <Text
                        style={
                          Array [
                            Object {
                              "color": "#ffffff",
                              "fontFamily": "SourceSansPro-Regular",
                              "fontSize": 12,
                              "fontStyle": "normal",
                              "lineHeight": 16,
                              "textAlign": "center",
                              "textAlignVertical": "bottom",
                              "textTransform": "none",
                            },
                            Object {
                              "fontSize": 26,
                              "lineHeight": 20,
                            },
                          ]
                        }
                      >
                        S
                      </Text>
                    </View>
                    <View
                      style={
                        Array [
                          Object {},
                          Object {
                            "alignItems": "center",
                            "flex": 1,
                            "flexDirection": "row",
                            "justifyContent": "space-between",
                          },
                        ]
                      }
                    >
                      <View
                        style={
                          Array [
                            Object {},
                            Object {
                              "flexDirection": "column",
                            },
                          ]
                        }
                      >
                        <Text
                          style={
                            Object {
                              "color": "#005A7F",
                              "fontFamily": "SourceSansPro-Regular",
                              "fontSize": 16,
                              "fontStyle": "normal",
                              "lineHeight": 24,
                              "textAlignVertical": "center",
                              "textTransform": "none",
                            }
                          }
                        >
                          Scotty Waggoner
                        </Text>
                        <Text
                          style={
                            Array [
                              Object {
                                "color": "#B4B6BA",
                                "fontFamily": "SourceSansPro-Regular",
                                "fontSize": 12,
                                "fontStyle": "normal",
                                "lineHeight": 16,
                                "textAlignVertical": "center",
                                "textTransform": "none",
                              },
                            ]
                          }
                        >
                          Joined 
                          <Text
                            style={
                              Object {
                                "color": "#B4B6BA",
                                "fontFamily": "SourceSansPro-Regular",
                                "fontSize": 12,
                                "fontStyle": "normal",
                                "lineHeight": 16,
                                "textAlignVertical": "center",
                                "textTransform": "none",
                              }
                            }
                            testID="Text"
                          >
                            Wednesday
                          </Text>
                        </Text>
                      </View>
                      <Image
                        source={null}
                        style={
                          Object {
                            "marginRight": 25,
                          }
                        }
                      />
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RCTScrollView>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`renders correctly for joined members 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ECEEF2",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      />
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "flex-start",
                "alignSelf": "flex-start",
                "justifyContent": "center",
              },
              Object {
                "alignItems": "flex-end",
                "alignSelf": "flex-end",
              },
            ]
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "opacity": 1,
              }
            }
            testID="IconButton"
          >
            <Image
              source={
                Object {
                  "testUri": "../../../assets/images/closeButton.png",
                }
              }
              style={
                Object {
                  "margin": 10,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
  <RCTScrollView
    style={
      Object {
        "backgroundColor": "#ECEEF2",
        "flex": 1,
        "flexDirection": "column",
      }
    }
  >
    <View>
      <Text
        style={
          Object {
            "color": "#505256",
            "fontFamily": "SourceSansPro-Light",
            "fontSize": 24,
            "fontStyle": "normal",
            "lineHeight": 30,
            "paddingHorizontal": 20,
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        1 Member Joined
      </Text>
      <View
        style={
          Array [
            Object {
              "paddingTop": 20,
            },
            Object {
              "flex": 1,
            },
          ]
        }
      >
        <RCTScrollView
          data={
            Array [
              Object {
                "accepted_at": "2020-02-26 12:00:00 PM GMT+0",
                "id": "111",
                "person": Object {
                  "full_name": "Christian Huffman",
                  "id": "111",
                },
              },
            ]
          }
          disableVirtualization={false}
          getItem={[Function]}
          getItemCount={[Function]}
          horizontal={false}
          initialNumToRender={10}
          keyExtractor={[Function]}
          maxToRenderPerBatch={10}
          onContentSizeChange={[Function]}
          onEndReachedThreshold={2}
          onLayout={[Function]}
          onMomentumScrollEnd={[Function]}
          onScroll={[Function]}
          onScrollBeginDrag={[Function]}
          onScrollEndDrag={[Function]}
          removeClippedSubviews={false}
          renderItem={[Function]}
          scrollEventThrottle={50}
          stickyHeaderIndices={Array []}
          style={
            Object {
              "backgroundColor": "#ECEEF2",
              "flex": 1,
            }
          }
          updateCellsBatchingPeriod={50}
          viewabilityConfigCallbackPairs={Array []}
          windowSize={21}
        >
          <View>
            <View
              onLayout={[Function]}
              style={null}
            >
              <View
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                testID="ChallengeMemberItemButton"
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#ffffff",
                        "borderRadius": 8,
                        "elevation": 4,
                        "flexDirection": "row",
                        "marginHorizontal": 16,
                        "marginVertical": 8,
                        "shadowColor": "#000000",
                        "shadowOffset": Object {
                          "height": 2,
                          "width": 0,
                        },
                        "shadowOpacity": 0.3,
                        "shadowRadius": 2,
                      },
                      Object {
                        "borderRadius": 8,
                        "elevation": 6,
                        "marginVertical": 4,
                        "shadowColor": "rgba(0,0,0,0.1)",
                        "shadowOffset": Object {
                          "height": 6,
                          "width": 4,
                        },
                        "shadowOpacity": 0.3,
                        "shadowRadius": 2,
                      },
                    ]
                  }
                >
                  <View
                    style={
                      Array [
                        Object {
                          "paddingHorizontal": 20,
                          "paddingVertical": 16,
                          "width": 750,
                        },
                        Object {
                          "alignItems": "center",
                          "flexDirection": "row",
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "alignItems": "center",
                            "justifyContent": "center",
                          },
                          Array [
                            Object {
                              "borderRadius": 24,
                              "height": 48,
                              "width": 48,
                            },
                            Object {
                              "backgroundColor": "rgb(159, 167, 125)",
                            },
                            Object {
                              "marginRight": 10,
                            },
                          ],
                        ]
                      }
                    >
                      <Text
                        style={
                          Array [
                            Object {
                              "color": "#ffffff",
                              "fontFamily": "SourceSansPro-Regular",
                              "fontSize": 12,
                              "fontStyle": "normal",
                              "lineHeight": 16,
                              "textAlign": "center",
                              "textAlignVertical": "bottom",
                              "textTransform": "none",
                            },
                            Object {
                              "fontSize": 26,
                              "lineHeight": 20,
                            },
                          ]
                        }
                      >
                        C
                      </Text>
                    </View>
                    <View
                      style={
                        Array [
                          Object {},
                          Object {
                            "alignItems": "center",
                            "flex": 1,
                            "flexDirection": "row",
                            "justifyContent": "space-between",
                          },
                        ]
                      }
                    >
                      <View
                        style={
                          Array [
                            Object {},
                            Object {
                              "flexDirection": "column",
                            },
                          ]
                        }
                      >
                        <Text
                          style={
                            Object {
                              "color": "#005A7F",
                              "fontFamily": "SourceSansPro-Regular",
                              "fontSize": 16,
                              "fontStyle": "normal",
                              "lineHeight": 24,
                              "textAlignVertical": "center",
                              "textTransform": "none",
                            }
                          }
                        >
                          Christian Huffman
                        </Text>
                        <Text
                          style={
                            Array [
                              Object {
                                "color": "#B4B6BA",
                                "fontFamily": "SourceSansPro-Regular",
                                "fontSize": 12,
                                "fontStyle": "normal",
                                "lineHeight": 16,
                                "textAlignVertical": "center",
                                "textTransform": "none",
                              },
                            ]
                          }
                        >
                          Joined 
                          <Text
                            style={
                              Object {
                                "color": "#B4B6BA",
                                "fontFamily": "SourceSansPro-Regular",
                                "fontSize": 12,
                                "fontStyle": "normal",
                                "lineHeight": 16,
                                "textAlignVertical": "center",
                                "textTransform": "none",
                              }
                            }
                            testID="Text"
                          >
                            Wednesday
                          </Text>
                        </Text>
                      </View>
                      <Image
                        source={null}
                        style={
                          Object {
                            "marginRight": 25,
                          }
                        }
                      />
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RCTScrollView>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`renders plural sentence for joined members 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ECEEF2",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      />
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "flex-start",
                "alignSelf": "flex-start",
                "justifyContent": "center",
              },
              Object {
                "alignItems": "flex-end",
                "alignSelf": "flex-end",
              },
            ]
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "opacity": 1,
              }
            }
            testID="IconButton"
          >
            <Image
              source={
                Object {
                  "testUri": "../../../assets/images/closeButton.png",
                }
              }
              style={
                Object {
                  "margin": 10,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
  <RCTScrollView
    style={
      Object {
        "backgroundColor": "#ECEEF2",
        "flex": 1,
        "flexDirection": "column",
      }
    }
  >
    <View>
      <Text
        style={
          Object {
            "color": "#505256",
            "fontFamily": "SourceSansPro-Light",
            "fontSize": 24,
            "fontStyle": "normal",
            "lineHeight": 30,
            "paddingHorizontal": 20,
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        2 Members Joined
      </Text>
      <View
        style={
          Array [
            Object {
              "paddingTop": 20,
            },
            Object {
              "flex": 1,
            },
          ]
        }
      >
        <RCTScrollView
          data={
            Array [
              Object {
                "accepted_at": "2020-02-26 12:00:00 PM GMT+0",
                "id": "111",
                "person": Object {
                  "full_name": "Christian Huffman",
                  "id": "111",
                },
              },
              Object {
                "accepted_at": "2020-02-26 12:00:00 PM GMT+0",
                "id": "112",
                "person": Object {
                  "full_name": "Scotty Waggoner",
                  "id": "112",
                },
              },
            ]
          }
          disableVirtualization={false}
          getItem={[Function]}
          getItemCount={[Function]}
          horizontal={false}
          initialNumToRender={10}
          keyExtractor={[Function]}
          maxToRenderPerBatch={10}
          onContentSizeChange={[Function]}
          onEndReachedThreshold={2}
          onLayout={[Function]}
          onMomentumScrollEnd={[Function]}
          onScroll={[Function]}
          onScrollBeginDrag={[Function]}
          onScrollEndDrag={[Function]}
          removeClippedSubviews={false}
          renderItem={[Function]}
          scrollEventThrottle={50}
          stickyHeaderIndices={Array []}
          style={
            Object {
              "backgroundColor": "#ECEEF2",
              "flex": 1,
            }
          }
          updateCellsBatchingPeriod={50}
          viewabilityConfigCallbackPairs={Array []}
          windowSize={21}
        >
          <View>
            <View
              onLayout={[Function]}
              style={null}
            >
              <View
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                testID="ChallengeMemberItemButton"
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#ffffff",
                        "borderRadius": 8,
                        "elevation": 4,
                        "flexDirection": "row",
                        "marginHorizontal": 16,
                        "marginVertical": 8,
                        "shadowColor": "#000000",
                        "shadowOffset": Object {
                          "height": 2,
                          "width": 0,
                        },
                        "shadowOpacity": 0.3,
                        "shadowRadius": 2,
                      },
                      Object {
                        "borderRadius": 8,
                        "elevation": 6,
                        "marginVertical": 4,
                        "shadowColor": "rgba(0,0,0,0.1)",
                        "shadowOffset": Object {
                          "height": 6,
                          "width": 4,
                        },
                        "shadowOpacity": 0.3,
                        "shadowRadius": 2,
                      },
                    ]
                  }
                >
                  <View
                    style={
                      Array [
                        Object {
                          "paddingHorizontal": 20,
                          "paddingVertical": 16,
                          "width": 750,
                        },
                        Object {
                          "alignItems": "center",
                          "flexDirection": "row",
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "alignItems": "center",
                            "justifyContent": "center",
                          },
                          Array [
                            Object {
                              "borderRadius": 24,
                              "height": 48,
                              "width": 48,
                            },
                            Object {
                              "backgroundColor": "rgb(159, 167, 125)",
                            },
                            Object {
                              "marginRight": 10,
                            },
                          ],
                        ]
                      }
                    >
                      <Text
                        style={
                          Array [
                            Object {
                              "color": "#ffffff",
                              "fontFamily": "SourceSansPro-Regular",
                              "fontSize": 12,
                              "fontStyle": "normal",
                              "lineHeight": 16,
                              "textAlign": "center",
                              "textAlignVertical": "bottom",
                              "textTransform": "none",
                            },
                            Object {
                              "fontSize": 26,
                              "lineHeight": 20,
                            },
                          ]
                        }
                      >
                        C
                      </Text>
                    </View>
                    <View
                      style={
                        Array [
                          Object {},
                          Object {
                            "alignItems": "center",
                            "flex": 1,
                            "flexDirection": "row",
                            "justifyContent": "space-between",
                          },
                        ]
                      }
                    >
                      <View
                        style={
                          Array [
                            Object {},
                            Object {
                              "flexDirection": "column",
                            },
                          ]
                        }
                      >
                        <Text
                          style={
                            Object {
                              "color": "#005A7F",
                              "fontFamily": "SourceSansPro-Regular",
                              "fontSize": 16,
                              "fontStyle": "normal",
                              "lineHeight": 24,
                              "textAlignVertical": "center",
                              "textTransform": "none",
                            }
                          }
                        >
                          Christian Huffman
                        </Text>
                        <Text
                          style={
                            Array [
                              Object {
                                "color": "#B4B6BA",
                                "fontFamily": "SourceSansPro-Regular",
                                "fontSize": 12,
                                "fontStyle": "normal",
                                "lineHeight": 16,
                                "textAlignVertical": "center",
                                "textTransform": "none",
                              },
                            ]
                          }
                        >
                          Joined 
                          <Text
                            style={
                              Object {
                                "color": "#B4B6BA",
                                "fontFamily": "SourceSansPro-Regular",
                                "fontSize": 12,
                                "fontStyle": "normal",
                                "lineHeight": 16,
                                "textAlignVertical": "center",
                                "textTransform": "none",
                              }
                            }
                            testID="Text"
                          >
                            Wednesday
                          </Text>
                        </Text>
                      </View>
                      <Image
                        source={null}
                        style={
                          Object {
                            "marginRight": 25,
                          }
                        }
                      />
                    </View>
                  </View>
                </View>
              </View>
            </View>
            <View
              onLayout={[Function]}
              style={null}
            >
              <View
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                testID="ChallengeMemberItemButton"
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#ffffff",
                        "borderRadius": 8,
                        "elevation": 4,
                        "flexDirection": "row",
                        "marginHorizontal": 16,
                        "marginVertical": 8,
                        "shadowColor": "#000000",
                        "shadowOffset": Object {
                          "height": 2,
                          "width": 0,
                        },
                        "shadowOpacity": 0.3,
                        "shadowRadius": 2,
                      },
                      Object {
                        "borderRadius": 8,
                        "elevation": 6,
                        "marginVertical": 4,
                        "shadowColor": "rgba(0,0,0,0.1)",
                        "shadowOffset": Object {
                          "height": 6,
                          "width": 4,
                        },
                        "shadowOpacity": 0.3,
                        "shadowRadius": 2,
                      },
                    ]
                  }
                >
                  <View
                    style={
                      Array [
                        Object {
                          "paddingHorizontal": 20,
                          "paddingVertical": 16,
                          "width": 750,
                        },
                        Object {
                          "alignItems": "center",
                          "flexDirection": "row",
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "alignItems": "center",
                            "justifyContent": "center",
                          },
                          Array [
                            Object {
                              "borderRadius": 24,
                              "height": 48,
                              "width": 48,
                            },
                            Object {
                              "backgroundColor": "rgb(216, 216, 67)",
                            },
                            Object {
                              "marginRight": 10,
                            },
                          ],
                        ]
                      }
                    >
                      <Text
                        style={
                          Array [
                            Object {
                              "color": "#ffffff",
                              "fontFamily": "SourceSansPro-Regular",
                              "fontSize": 12,
                              "fontStyle": "normal",
                              "lineHeight": 16,
                              "textAlign": "center",
                              "textAlignVertical": "bottom",
                              "textTransform": "none",
                            },
                            Object {
                              "fontSize": 26,
                              "lineHeight": 20,
                            },
                          ]
                        }
                      >
                        S
                      </Text>
                    </View>
                    <View
                      style={
                        Array [
                          Object {},
                          Object {
                            "alignItems": "center",
                            "flex": 1,
                            "flexDirection": "row",
                            "justifyContent": "space-between",
                          },
                        ]
                      }
                    >
                      <View
                        style={
                          Array [
                            Object {},
                            Object {
                              "flexDirection": "column",
                            },
                          ]
                        }
                      >
                        <Text
                          style={
                            Object {
                              "color": "#005A7F",
                              "fontFamily": "SourceSansPro-Regular",
                              "fontSize": 16,
                              "fontStyle": "normal",
                              "lineHeight": 24,
                              "textAlignVertical": "center",
                              "textTransform": "none",
                            }
                          }
                        >
                          Scotty Waggoner
                        </Text>
                        <Text
                          style={
                            Array [
                              Object {
                                "color": "#B4B6BA",
                                "fontFamily": "SourceSansPro-Regular",
                                "fontSize": 12,
                                "fontStyle": "normal",
                                "lineHeight": 16,
                                "textAlignVertical": "center",
                                "textTransform": "none",
                              },
                            ]
                          }
                        >
                          Joined 
                          <Text
                            style={
                              Object {
                                "color": "#B4B6BA",
                                "fontFamily": "SourceSansPro-Regular",
                                "fontSize": 12,
                                "fontStyle": "normal",
                                "lineHeight": 16,
                                "textAlignVertical": "center",
                                "textTransform": "none",
                              }
                            }
                            testID="Text"
                          >
                            Wednesday
                          </Text>
                        </Text>
                      </View>
                      <Image
                        source={null}
                        style={
                          Object {
                            "marginRight": 25,
                          }
                        }
                      />
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RCTScrollView>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`renders singular sentence for completed members 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ECEEF2",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      />
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "flex-start",
                "alignSelf": "flex-start",
                "justifyContent": "center",
              },
              Object {
                "alignItems": "flex-end",
                "alignSelf": "flex-end",
              },
            ]
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "opacity": 1,
              }
            }
            testID="IconButton"
          >
            <Image
              source={
                Object {
                  "testUri": "../../../assets/images/closeButton.png",
                }
              }
              style={
                Object {
                  "margin": 10,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
  <RCTScrollView
    style={
      Object {
        "backgroundColor": "#ECEEF2",
        "flex": 1,
        "flexDirection": "column",
      }
    }
  >
    <View>
      <Text
        style={
          Object {
            "color": "#505256",
            "fontFamily": "SourceSansPro-Light",
            "fontSize": 24,
            "fontStyle": "normal",
            "lineHeight": 30,
            "paddingHorizontal": 20,
            "textAlignVertical": "center",
            "textTransform": "none",
          }
        }
      >
        1 Member Joined
      </Text>
      <View
        style={
          Array [
            Object {
              "paddingTop": 20,
            },
            Object {
              "flex": 1,
            },
          ]
        }
      >
        <RCTScrollView
          data={
            Array [
              Object {
                "accepted_at": "2020-02-26 12:00:00 PM GMT+0",
                "id": "111",
                "person": Object {
                  "full_name": "Christian Huffman",
                  "id": "111",
                },
              },
            ]
          }
          disableVirtualization={false}
          getItem={[Function]}
          getItemCount={[Function]}
          horizontal={false}
          initialNumToRender={10}
          keyExtractor={[Function]}
          maxToRenderPerBatch={10}
          onContentSizeChange={[Function]}
          onEndReachedThreshold={2}
          onLayout={[Function]}
          onMomentumScrollEnd={[Function]}
          onScroll={[Function]}
          onScrollBeginDrag={[Function]}
          onScrollEndDrag={[Function]}
          removeClippedSubviews={false}
          renderItem={[Function]}
          scrollEventThrottle={50}
          stickyHeaderIndices={Array []}
          style={
            Object {
              "backgroundColor": "#ECEEF2",
              "flex": 1,
            }
          }
          updateCellsBatchingPeriod={50}
          viewabilityConfigCallbackPairs={Array []}
          windowSize={21}
        >
          <View>
            <View
              onLayout={[Function]}
              style={null}
            >
              <View
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                testID="ChallengeMemberItemButton"
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#ffffff",
                        "borderRadius": 8,
                        "elevation": 4,
                        "flexDirection": "row",
                        "marginHorizontal": 16,
                        "marginVertical": 8,
                        "shadowColor": "#000000",
                        "shadowOffset": Object {
                          "height": 2,
                          "width": 0,
                        },
                        "shadowOpacity": 0.3,
                        "shadowRadius": 2,
                      },
                      Object {
                        "borderRadius": 8,
                        "elevation": 6,
                        "marginVertical": 4,
                        "shadowColor": "rgba(0,0,0,0.1)",
                        "shadowOffset": Object {
                          "height": 6,
                          "width": 4,
                        },
                        "shadowOpacity": 0.3,
                        "shadowRadius": 2,
                      },
                    ]
                  }
                >
                  <View
                    style={
                      Array [
                        Object {
                          "paddingHorizontal": 20,
                          "paddingVertical": 16,
                          "width": 750,
                        },
                        Object {
                          "alignItems": "center",
                          "flexDirection": "row",
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "alignItems": "center",
                            "justifyContent": "center",
                          },
                          Array [
                            Object {
                              "borderRadius": 24,
                              "height": 48,
                              "width": 48,
                            },
                            Object {
                              "backgroundColor": "rgb(159, 167, 125)",
                            },
                            Object {
                              "marginRight": 10,
                            },
                          ],
                        ]
                      }
                    >
                      <Text
                        style={
                          Array [
                            Object {
                              "color": "#ffffff",
                              "fontFamily": "SourceSansPro-Regular",
                              "fontSize": 12,
                              "fontStyle": "normal",
                              "lineHeight": 16,
                              "textAlign": "center",
                              "textAlignVertical": "bottom",
                              "textTransform": "none",
                            },
                            Object {
                              "fontSize": 26,
                              "lineHeight": 20,
                            },
                          ]
                        }
                      >
                        C
                      </Text>
                    </View>
                    <View
                      style={
                        Array [
                          Object {},
                          Object {
                            "alignItems": "center",
                            "flex": 1,
                            "flexDirection": "row",
                            "justifyContent": "space-between",
                          },
                        ]
                      }
                    >
                      <View
                        style={
                          Array [
                            Object {},
                            Object {
                              "flexDirection": "column",
                            },
                          ]
                        }
                      >
                        <Text
                          style={
                            Object {
                              "color": "#005A7F",
                              "fontFamily": "SourceSansPro-Regular",
                              "fontSize": 16,
                              "fontStyle": "normal",
                              "lineHeight": 24,
                              "textAlignVertical": "center",
                              "textTransform": "none",
                            }
                          }
                        >
                          Christian Huffman
                        </Text>
                        <Text
                          style={
                            Array [
                              Object {
                                "color": "#B4B6BA",
                                "fontFamily": "SourceSansPro-Regular",
                                "fontSize": 12,
                                "fontStyle": "normal",
                                "lineHeight": 16,
                                "textAlignVertical": "center",
                                "textTransform": "none",
                              },
                            ]
                          }
                        >
                          Joined 
                          <Text
                            style={
                              Object {
                                "color": "#B4B6BA",
                                "fontFamily": "SourceSansPro-Regular",
                                "fontSize": 12,
                                "fontStyle": "normal",
                                "lineHeight": 16,
                                "textAlignVertical": "center",
                                "textTransform": "none",
                              }
                            }
                            testID="Text"
                          >
                            Wednesday
                          </Text>
                        </Text>
                      </View>
                      <Image
                        source={null}
                        style={
                          Object {
                            "marginRight": 25,
                          }
                        }
                      />
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RCTScrollView>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
